# py-diceware

./: CHANGELOG.md  README.md  cli.py  config.py  diceware.py  passphrase.py  roll_dice.py  setup.cfg  test_diceware.py  test_roll_dice.py  wordlist.py  wordlist_chars.txt
src/py_diceware/: cli.py  config.py  passphrase.py  roll_dice.py
tests/: test_cli.py  test_diceware.py  test_passphrase.py  test_roll_dice.py
